apps/production/routers/blog-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog-insecure
  namespace: traefik-production
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`blog.teamhephy.info`)
    kind: Rule
    services:
    - kind: Service
      name: blog-x-blog-x-hephy-stg
      namespace: vcluster-hephy-stg-turkey-local
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: traefik-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`blog.teamhephy.info`)
    kind: Rule
    services:
    - kind: Service
      name: blog-x-blog-x-hephy-stg
      namespace: vcluster-hephy-stg-turkey-local
      port: 80
  tls:
    certResolver: prodresolver
