apps/production/routers/commitstew-com-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: commitstew-com-insecure
  namespace: traefik-production
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`giovanni.commitstew.com`) || Host(`nwinter.commitstew.com`) || Host(`alys.commitstew.com`) || Host(`dan.commitstew.com`) || Host(`xenocid.commitstew.com`) || Host(`jordan.commitstew.com`) || Host(`alys.commitstew.com`) || Host(`dan.commitstew.com`) || Host(`xenocid.commitstew.com`) || Host(`jordan.commitstew.com`) || Host(`brian.commitstew.com`) || Host(`nick.commitstew.com`) || Host(`alex.commitstew.com`) || Host(`clarissa.commitstew.com`) || Host(`luke.commitstew.com`) || Host [...]
    kind: Rule
    services:
    - name: commitsto-staging-x-commitsto-staging-x-hephy-stg
      namespace: vcluster-hephy-stg-turkey-local
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: commitstew-com
  namespace: traefik-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`giovanni.commitstew.com`) || Host(`nwinter.commitstew.com`) || Host(`alys.commitstew.com`) || Host(`dan.commitstew.com`) || Host(`xenocid.commitstew.com`) || Host(`jordan.commitstew.com`) || Host(`alys.commitstew.com`) || Host(`dan.commitstew.com`) || Host(`xenocid.commitstew.com`) || Host(`jordan.commitstew.com`) || Host(`brian.commitstew.com`) || Host(`nick.commitstew.com`) || Host(`alex.commitstew.com`) || Host(`clarissa.commitstew.com`) || Host(`luke.commitstew.com`) || Host [...]
    kind: Rule
    services:
    - name: commitsto-staging-x-commitsto-staging-x-hephy-stg
      namespace: vcluster-hephy-stg-turkey-local
      port: 80
  tls:
    certResolver: myresolver
