apps/production/routers/water-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: water-insecure
  namespace: traefik-production
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`water.teamhephy.info`)
    kind: Rule
    services:
    - kind: Service
      name: water-x-water-x-hephy-stg
      namespace: vcluster-hephy-stg-turkey-local
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: water
  namespace: traefik-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`water.teamhephy.info`)
    kind: Rule
    services:
    - kind: Service
      name: water-x-water-x-hephy-stg
      namespace: vcluster-hephy-stg-turkey-local
      port: 80
  tls:
    certResolver: prodresolver
