apps/production/routers/yaateeh-dev-ingressroute.yaml
---
apiVersion: traefik.io/v1
kind: IngressRoute
metadata:
  name: yaateeh-dev-insecure
  namespace: traefik-production
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`giovanni.yaateeh.dev`) || Host(`nwinter.yaateeh.dev`) || Host(`alys.yaateeh.dev`) || Host(`dan.yaateeh.dev`) || Host(`xenocid.yaateeh.dev`) || Host(`jordan.yaateeh.dev`) || Host(`alys.yaateeh.dev`) || Host(`dan.yaateeh.dev`) || Host(`xenocid.yaateeh.dev`) || Host(`jordan.yaateeh.dev`) || Host(`brian.yaateeh.dev`) || Host(`nick.yaateeh.dev`) || Host(`alex.yaateeh.dev`) || Host(`clarissa.yaateeh.dev`) || Host(`luke.yaateeh.dev`) || Host(`mike.yaateeh.dev`) || Host(`max.yaateeh.dev [...]
    kind: Rule
    services:
    - name: commitsto-staging-x-commitsto-staging-x-hephy-stg
      namespace: vcluster-hephy-stg-turkey-local
      port: 80
---
apiVersion: traefik.io/v1
kind: IngressRoute
metadata:
  name: yaateeh-dev
  namespace: traefik-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`giovanni.yaateeh.dev`) || Host(`nwinter.yaateeh.dev`) || Host(`alys.yaateeh.dev`) || Host(`dan.yaateeh.dev`) || Host(`xenocid.yaateeh.dev`) || Host(`jordan.yaateeh.dev`) || Host(`alys.yaateeh.dev`) || Host(`dan.yaateeh.dev`) || Host(`xenocid.yaateeh.dev`) || Host(`jordan.yaateeh.dev`) || Host(`brian.yaateeh.dev`) || Host(`nick.yaateeh.dev`) || Host(`alex.yaateeh.dev`) || Host(`clarissa.yaateeh.dev`) || Host(`luke.yaateeh.dev`) || Host(`mike.yaateeh.dev`) || Host(`max.yaateeh.dev [...]
    kind: Rule
    services:
    - name: commitsto-staging-x-commitsto-staging-x-hephy-stg
      namespace: vcluster-hephy-stg-turkey-local
      port: 80
  tls:
    certResolver: myresolver
